WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159177
Crashing at an unreachable code trap in FTL should give more information
https://bugs.webkit.org/show_bug.cgi?id=159177
Summary
Crashing at an unreachable code trap in FTL should give more information
Filip Pizlo
Reported
2016-06-27 16:01:33 PDT
Patch forthcoming.
Attachments
the patch
(3.60 KB, patch)
2016-06-27 16:04 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-06-27 16:04:02 PDT
Created
attachment 282179
[details]
the patch
WebKit Commit Bot
Comment 2
2016-06-27 16:06:10 PDT
Attachment 282179
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:11247: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2016-06-27 16:27:26 PDT
Landed in
https://trac.webkit.org/changeset/202519
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug