Crashing at an unreachable code trap in FTL should give more information https://bugs.webkit.org/show_bug.cgi?id=159177

Reviewed by Saam Barati.

This stuffs information into registers so that we have some chance of seeing what happened
by looking at the register dumps.

* assembler/AbortReason.h:
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::ftlUnreachable):
(JSC::FTL::DFG::LowerDFGToB3::compileBlock):
(JSC::FTL::DFG::LowerDFGToB3::crash):



Canonical link: https://commits.webkit.org/177270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202519 268f45cc-cd09-0410-ab3c-d52691b4dbfc